--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,14 @@ license = Mozilla_2_0
 copyright_holder = Philippe M. Chiasson
 copyright_year   = 2014
 
-version = 0.002
+version = 0.003
 
 [@Git]
 [@Basic]
 
 [PkgVersion]
+
+[ChangelogFromGit]
 
 [ExtraTests]
 [PodCoverageTests]
