add critic tests

--- a/dist.ini
+++ b/dist.ini
@@ -7,17 +7,21 @@ copyright_year   = 2014
 version = 0.003
 
 [@Git]
-[Git::NextVersion]
+;[Git::NextVersion]
+
 [@Basic]
 
 [PkgVersion]
+[PodVersion]
 
 [ChangelogFromGit]
 
 [ExtraTests]
+
 [PodCoverageTests]
 [PodWeaver]
 [PodSyntaxTests]
+[CriticTests]
 
 [Signature]
 
