Add pre-requisites and meta.json

--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,6 @@ version = 0.003
 [@Basic]
 
 [PkgVersion]
-[PodVersion]
 
 [ChangelogFromGit]
 
@@ -21,8 +20,14 @@ version = 0.003
 [PodCoverageTests]
 [PodWeaver]
 [PodSyntaxTests]
-[CriticTests]
+[Test::Perl::Critic]
 
 [Signature]
 
 [TestRelease]
+
+[AutoPrereqs]
+
+[InstallGuide]
+[MetaJSON]
+
