--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Mozilla_2_0
 copyright_holder = Philippe M. Chiasson
 copyright_year   = 2014
 
-version = 0.004
+version = 0.005
 
 [@Git]
 ;[Git::NextVersion]
@@ -28,6 +28,7 @@ version = 0.004
 
 [AutoPrereqs]
 
-[InstallGuide]
 [MetaJSON]
 
+[PerlTidy]
+  perltidyrc = xt/.perltidyrc
