--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,10 @@ license = Mozilla_2_0
 copyright_holder = Philippe M. Chiasson
 copyright_year   = 2014
 
-version = 0.005
+;version = 0.005
 
 [@Git]
-;[Git::NextVersion]
+[Git::NextVersion]
 
 [@Basic]
 
