make search configurable. Use log4perl

--- a/sync-dist.cfg
+++ b/sync-dist.cfg
@@ -5,3 +5,12 @@ kanbanize_incoming="Pending Triage"
 
 bugzilla_token=
 bugzilla_id=
+
+verbose=0
+
+# What to search for
+product=
+
+component=
+component=
+
