update sync-dist.cfg to note the UTC API key requirement

--- a/sync-dist.cfg
+++ b/sync-dist.cfg
@@ -3,6 +3,9 @@ kanbanize_apikey=
 kanbanize_boardid=
 kanbanize_incoming="Pending Triage"
 
+# The API key must be associated with a user whose timezone is UTC.
+# Otherwise, syncing-related time comparisons with Bugzilla will fail.
+
 bugzilla_token=
 bugzilla_id=
 
