Allow new cards to have a user-specified priority.

--- a/sync-dist.cfg
+++ b/sync-dist.cfg
@@ -2,6 +2,7 @@
 kanbanize_apikey=
 kanbanize_boardid=
 kanbanize_incoming="Pending Triage"
+kanbanize_priority="Average"
 
 # The API key must be associated with a user whose timezone is UTC.
 # Otherwise, syncing-related time comparisons with Bugzilla will fail.
