reformat sync-dist.cfg and write docs

--- a/sync-dist.cfg
+++ b/sync-dist.cfg
@@ -1,25 +1,48 @@
-# Configuration
-kanbanize_apikey=
+### General settings
+
+# When disabled, only log modifications, warnings, and errors to the console.
+verbose=0
+
+# What to search for
+
+# ???
+product=
+# ???
+component=
+component=
+
+
+### Kanbanize settings.
+
+# Kanbanize site: TAGNAME in https://TAGNAME.kanbanize.com/... is replaced by this value.
+tag=
+# Board numeric id: NUMBER in https://tagname.kanbanize.com/ctrl_board/NUMBER/... is replaced by this value.
 kanbanize_boardid=
+
+# Create a user in the Kanbanize account with full read/write access to the board.
+# Issue an API key as that user and provide it here.
+# WARNING: The user MUST be in UTC timezone, or otherwise Bugzilla sync will fail.
+kanbanize_apikey=
+
+# When creating new cards to point to newly-filed bugs, put the new cards in this row/column.
 kanbanize_incoming="Pending Triage"
 kanbanize_priority="Average"
 
-# The API key must be associated with a user whose timezone is UTC.
-# Otherwise, syncing-related time comparisons with Bugzilla will fail.
 
-bugzilla_token=
+### Bugzilla settings
+
+# Work with the BMO admins to create a new Bugzilla account, providing its BMO email address here.
 bugzilla_id=
+# The BMO account will also need a static API token, provided below.
+bugzilla_token=
 
-verbose=0
 
-tag=
+### BMO email address to Kanbanize userid mappings
 
-# What to search for
-product=
+# By default, BMO email <username@mozilla.com> is converted to Kanbanize userid <username>.
+# This assumption does not hold true for all users. The exceptions must be listed manually below.
 
-component=
-component=
-
-# Map bugmail to kanbanize userids 
-# [mail-map]
-# bugmail user@gmail.com        = user
+[mail-map]
+bugmail bmo.1@address.com = kanbanizeusername1
+bugmail bmo.2@address.com = kanbanizeusername2
+bugmail bmo.3@address.com = kanbanizeusername3
